--- a/bomb_review/src/app/components/input/input.component.html
+++ b/bomb_review/src/app/components/input/input.component.html
@@ -1,3 +1,4 @@
-<ion-item class="ion-margin-bottom">
-  <ion-input [type]="type" [placeholder]="placeholder"></ion-input>
-</ion-item>
+<div class="form-field">
+  <label [ngClass]="focused ? 'label-focused' : ''">{{label}}</label>
+  <input [type]="type" (focus)="focused = true" (blur)="onBlur($event)"/>
+</div>
