--- a/bomb_review/src/app/components/input/input.component.scss
+++ b/bomb_review/src/app/components/input/input.component.scss
@@ -1,19 +1,47 @@
-ion-item{
-    border-radius: 50px;
-    height: 55px;
-    box-shadow: 1px 8px 8px 0px rgba(0,0,0,0.22);
-    --highlight-height: 0px;
+.form-field{
+    position: relative;
+    margin-bottom: 1rem;
+    height: 50px;
 
-    ion-input{
-        font-size: 18px;
-        --padding-top: 20px;
-        --padding-bottom: 15px;
-        --padding-start: 5px;
+    label{
+        position: absolute;
+        left: 1rem;
+        top: 1rem;
+        padding: 0 0.25rem;
+        color: #ffffff;
+        font-size: size;
+        transition: 0.3s;
     }
 
-    a{
-       font-size: 17px;
-       letter-spacing: 0.5px;
-       text-decoration: none; 
+    input{
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        font-size: 17px;
+        font-weight: 600;
+        border: 2px solid #e7ebee;
+        border-radius: 10px;
+        outline: none;
+        padding: 1rem;
+        background: none;
+        z-index: 1;
+        color: #171c25;
     }
+
+    input:focus{
+        border-color: #3dc2ff;
+    }
+
+    .label-focused{
+        top: -0.4rem;
+        left: 0.8rem;
+        font-size: 14px;
+        font-weight: 600;
+        background: rgb(0, 0, 0);
+        z-index: 10;
+    }
+
+
 }
