--- a/bomb_review/src/theme/variables.scss
+++ b/bomb_review/src/theme/variables.scss
@@ -20,13 +20,12 @@
 	--ion-color-secondary-tint: #ffa931;
 
   /** tertiary **/
-  --ion-color-tertiary: #5260ff;
-  --ion-color-tertiary-rgb: 82, 96, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
-
+  --ion-color-tertiary: #ff9f1a;
+	--ion-color-tertiary-rgb: 255,159,26;
+	--ion-color-tertiary-contrast: #000000;
+	--ion-color-tertiary-contrast-rgb: 0,0,0;
+	--ion-color-tertiary-shade: #e08c17;
+	--ion-color-tertiary-tint: #ffa931
   /** success **/
   --ion-color-success: #2dd36f;
   --ion-color-success-rgb: 45, 211, 111;
