prueba de slider en angular ionic(sin lazy loading)

--- a/bomb_review/src/app/tabs/tabs.page.html
+++ b/bomb_review/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
 <ion-tabs>  
 
   <ion-fab vertical="bottom" horizontal="center" translucent="true">
-    <img src="/src/assets/icon/logo.png" >
+    <img src="assets/icon/logo.png" >
   </ion-fab>
   
   <ion-tab-bar slot="bottom" class="ion-no-border">
