--- a/bomb_review/src/app/tab1/tab1.page.html
+++ b/bomb_review/src/app/tab1/tab1.page.html
@@ -7,11 +7,34 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-slides [options]="options" class="ion-margin-top">
+
+    <ion-slide>
+      <ion-card>
+          <img src="assets/icon/logo.png" alt="">
+      </ion-card>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-card>
+          <img src="assets/icon/logo.png" alt="">
+      </ion-card>
+   </ion-slide>
+
+    <ion-slide>
+      <ion-card>
+          <img src="assets/icon/logo.png" alt="">
+      </ion-card>
+    </ion-slide>
+    
+    <ion-slide>
+        <ion-card>
+            <img src="assets/icon/logo.png" alt="">
+        </ion-card>
+    </ion-slide>
+
+  </ion-slides>
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
